--- a/index.html
+++ b/index.html
@@ -6,25 +6,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Soon &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Malinche Restaurant &mdash; Brooklyn NY</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -39,7 +25,7 @@
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -58,9 +44,9 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 
 	<div id="fh5co-container" class="js-fullheight">
@@ -73,19 +59,11 @@
 								<div id="fh5co-logo"><a href="index.html">Soon<strong>.</strong></a></div>
 							</nav>
 							<h1>We Are Coming Soon!</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<div class="col-md-12 desc">
-									<h2>Our webiste is opening soon. <br> Please register to notify you when it's ready!</h2>
-									<form class="form-inline" id="fh5co-header-subscribe">
-										<div class="col-md-12 col-md-offset-0">
-											<div class="form-group">
-												<input type="text" class="form-control" id="email" placeholder="Get notify by email">
-												<button type="submit" class="btn btn-primary">Subscribe</button>
-											</div>
-										</div>
-									</form>
+									<h2>We are open NOW! <br> Come visit us at 1018 Nostrand Avenue Brooklyn NY !</h2>
+									
 									<ul class="fh5co-social-icons">
 										<li><a href="#"><i class="icon-twitter-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
@@ -100,7 +78,7 @@
 			</div>
 		</div>
 		<div class="bg-cover js-fullheight" style="background-image:url(images/img_bg_1.jpg);">
-			
+
 		</div>
 	</div>
 	</div>
@@ -108,7 +86,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -144,4 +122,3 @@
 
 	</body>
 </html>
-
