--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	<style>
+      #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+      }
+    </style>
 	</head>
 	<body>
 
@@ -56,22 +62,11 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc animate-box">
 							<nav class="fh5co-nav" role="navigation">
-								<div id="fh5co-logo"><a href="index.html">Soon<strong>.</strong></a></div>
+								<div id="fh5co-logo"><a href="index.html">Website Coming Soon<strong>.</strong></a></div>
 							</nav>
-							<h1>We Are Coming Soon!</h1>
-							<div class="simply-countdown simply-countdown-one"></div>
-							<div class="row">
-								<div class="col-md-12 desc">
-									<h2>We are open NOW! <br> Come visit us at 1018 Nostrand Avenue Brooklyn NY !</h2>
-									
-									<ul class="fh5co-social-icons">
-										<li><a href="#"><i class="icon-twitter-with-circle"></i></a></li>
-										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
-										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
-										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
-									</ul>
-								</div>
-							</div>
+							<h1>We are open NOW!</h1>
+							<h2> Come visit us at <br> 1018 Nostrand Avenue Brooklyn NY!</h2>
+							<div id="map"></div>
 						</div>
 					</div>
 				</div>
@@ -102,23 +97,17 @@
 	<script src="js/main.js"></script>
 
 	<script>
-    var d = new Date(new Date().getTime() + 1000 * 120 * 120 * 2000);
-
-    // default example
-    simplyCountdown('.simply-countdown-one', {
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate()
-    });
-
-    //jQuery example
-    $('#simply-countdown-losange').simplyCountdown({
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate(),
-        enableUtc: false
-    });
-</script>
+	// Initialize and add the map
+	function initMap() {
+	  var place = {lat: 40.663761, lng:  -73.951104};
+	  var map = new google.maps.Map(
+	      document.getElementById('map'), {zoom: 4, center: place});
+	  var marker = new google.maps.Marker({position: place, map: map});
+	}
+	    </script>
+	    <script async defer
+	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfTXwdPTMFqEBDhyGemnuHxNVGdM_-xJs&callback=initMap">
+	    </script>
 
 	</body>
 </html>
