--- a/about.html
+++ b/about.html
@@ -349,7 +349,7 @@
 					</ul>
 				</div>
 					<!-- - -->
-					<div style="position:absolute; left:47%;text-align : right" class="col-sm-6 col-md-4 p-t-50">
+					<div class="col-sm-6 col-md-4 p-t-50">
 					<h4 class="txt13 m-b-32">
 						Opening Times
 					</h4>
