--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 					</ul>
 				</div>
 					<!-- - -->
-					<div style="position:absolute; left:44%;text-align : right" class="col-sm-6 col-md-4 p-t-50">
+					<div class="col-sm-6 col-md-4 p-t-50">
 					<h4 class="txt13 m-b-38">
 						Opening Times
 					</h4>
