--- a/menu.html
+++ b/menu.html
@@ -590,8 +590,7 @@
 							</div>
 
 							<span class="info-item-mainmenu txt23">
-								2 Over Easy Eggs served with Slightly Fried Corn Tortilla topped
-								<br> with choice of Green or Red Sauce
+								2 Over Easy Eggs served with Slightly Fried Corn Tortilla topped <br> with choice of Green or Red Sauce
 							</span>
 						</div>
 
@@ -607,18 +606,18 @@
 								<div class="price-item-mainmenu txt22">
 									$8.50
 								</div>
-								<span class="info-item-mainmenu txt22">
-									Served with Refried Beans
-								</span>
-
 							</div>
+
+							<span class="info-item-mainmenu txt23">
+								Served with Refried Beans
+							</span>
 						</div>
 
 						<!-- Item mainmenu -->
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-								Chilaquiles (no meat)
+									Chilaquiles (no meat)
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -626,38 +625,31 @@
 								<div class="price-item-mainmenu txt22">
 									$8.00
 								</div>
-								<span class="info-item-mainmenu txt22">
-									Homemade Chilaquiles seved with choice of Green or Red Sauce <br>
-									Topped with Chopped Onions, Sour Cream and Cotija Cheese
-									<br> Eggs +$1.00 <br> Bistec +$3.00
-								</span>
-
 							</div>
+
+							<span class="info-item-mainmenu txt23">
+								Homemade Chilaquiles seved with choice of Green or Red Sauce <br>Topped with Chopped Onions, Sour Cream and Cotija Cheese <br> Eggs +$1.00 <br> Bistec +$3.00
+							</span>
 						</div>
 
+						<!-- Item mainmenu -->
+						<div class="item-mainmenu m-b-36">
+							<div class="flex-w flex-b m-b-3">
+								<a href="#" class="name-item-mainmenu txt21">
+									3-Eggs Omellete
+								</a>
 
-												<!-- Item mainmenu -->
-												<div class="item-mainmenu m-b-36">
-													<div class="flex-w flex-b m-b-3">
-														<a href="#" class="name-item-mainmenu txt21">
-														3-Eggs Omellete
-														</a>
+								<div class="line-item-mainmenu bg3-pattern"></div>
 
-														<div class="line-item-mainmenu bg3-pattern"></div>
+								<div class="price-item-mainmenu txt22">
+									$8.00
+								</div>
+							</div>
 
-														<div class="price-item-mainmenu txt22">
-															$8.00
-														</div>
-														<span class="info-item-mainmenu txt22">
-															Build Your Own Omellete Choice of 3 served with Home Fries
-															<br>Add: Ham/Onion/Mushroom/Avocado/Cheddar/Poblano Peppers/Chorizo
-															<br>ANY EXTRA ITEMS +$1.00
-														</span>
-
-													</div>
-												</div>
-
-
+							<span class="info-item-mainmenu txt23">
+								Build Your Own Omellete Choice of 3 served with Home Fries<br>Add: Ham/Onion/Mushroom/Avocado/Cheddar/Poblano Peppers/Chorizo<br>ANY EXTRA ITEMS +$1.00
+							</span>
+						</div>
 
 					</div>
 
