--- a/index.html
+++ b/index.html
@@ -403,6 +403,8 @@
 				</div>
 					<!-- - -->
 					<div class="col-sm-6 col-md-4 p-t-50">
+					</div>
+					<div class="col-sm-6 col-md-4 p-t-50">
 					<h4 class="txt13 m-b-38">
 						Opening Times
 					</h4>
