--- a/about.html
+++ b/about.html
@@ -350,6 +350,8 @@
 				</div>
 					<!-- - -->
 					<div class="col-sm-6 col-md-4 p-t-50">
+					</div>
+					<div class="col-sm-6 col-md-4 p-t-50">
 					<h4 class="txt13 m-b-32">
 						Opening Times
 					</h4>
