--- a/menu.html
+++ b/menu.html
@@ -1141,6 +1141,8 @@
 					</ul>
 				</div>
 					<!-- - -->
+					<div class="col-sm-6 col-md-4 p-t-50">
+					</div>
 				<div class="col-sm-6 col-md-4 p-t-50">
 					<h4 class="txt13 m-b-32">
 						Opening Times
