--- a/index.html
+++ b/index.html
@@ -120,15 +120,19 @@
 					<img src="images/gallery/tacos_chorizo.png" alt="GALLERY">
 				</a>
 
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/burro_carnitas2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/burro_carnitas.png" alt="GALLERY">
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_3.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_3.jpg" alt="GALLERY">
 				</a>
 
 				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/quesadilla_vegetales2.jpg" data-lightbox="gallery-footer">
 					<img src="images/gallery/quesadilla_vegetales.png" alt="GALLERY">
 				</a>
 
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/images/gallery/quesadilla_pollo2.jpg" data-lightbox="gallery-footer">
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_4.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_4.jpg" alt="GALLERY">
+				</a>
+
+			<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/quesadilla_pollo2.jpg" data-lightbox="gallery-footer">
 					<img src="images/gallery/quesadilla_pollo.png" alt="GALLERY">
 				</a>
 
@@ -136,13 +140,13 @@
 					<img src="images/gallery/tacos_bistec.png" alt="GALLERY">
 				</a>
 
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_camaron2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/tacos_camaron.png" alt="GALLERY">
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_1.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_1.jpg" alt="GALLERY">
 				</a>
 
 
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/burro_chorizo2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/burro_chorizo.png" alt="GALLERY">
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_2.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_2.jpg" alt="GALLERY">
 				</a>
 
 				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_pastor2.jpg" data-lightbox="gallery-footer">
@@ -152,6 +156,39 @@
 				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_suadero2.jpg" data-lightbox="gallery-footer">
 					<img src="images/gallery/tacos_suadero.png" alt="GALLERY">
 				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/burro_carnitas2.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/burro_carnitas.png" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_5.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_5.jpg" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_6.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_6.jpg" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_7.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_7.jpg" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_8.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_8.jpg" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_9.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_9.jpg" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_10.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_10.jpg" alt="GALLERY">
+				</a>
+
+				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_11.jpg" data-lightbox="gallery-footer">
+					<img src="images/gallery/thumbnail_11.jpg" alt="GALLERY">
+				</a>
+
 			</div>
 		</div>
 	</aside>
@@ -411,7 +448,7 @@
 
 					<ul>
 						<li class="txt14">
-							Mond-Sat 10:00 AM - 10:00 PM
+							Mon-Sat 10:00 AM - 10:00 PM
 						</li>
 						<li>
 							<br>
