--- a/menu.html
+++ b/menu.html
@@ -218,7 +218,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Carne A La Tampiquena
+									<strike>Carne A La Tampiquena</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -237,7 +237,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Mole con Pollo
+									<strike>Mole con Pollo</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -256,7 +256,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Chile Relleno
+									<strike>Chile Relleno</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -275,7 +275,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Costillas De Puerco
+									<strike>Costillas De Puerco</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -306,7 +306,7 @@
 								<div class="line-item-mainmenu bg3-pattern"></div>
 
 								<div class="price-item-mainmenu txt22">
-									$8.00
+									$9.00
 								</div>
 							</div>
 
@@ -319,7 +319,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-								Queso Fundido
+								<strike>Queso Fundido</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -338,7 +338,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Nachos
+									<strike>Nachos</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -397,7 +397,8 @@
 
 							<span class="info-item-mainmenu txt23">
 								Hand Made, topped with Lettuce, Sour Cream, Queso Fresco <br>
-								Add: Hongos/Queso con Epazote/Chorizo con Queso/Pollo/Vegetales/Chicharon
+								Choose: Hongos/Queso con Epazote/Chorizo con Queso/Pollo/Vegetales/Chicharon
+								<br>Add: $1.00 Shrimp
 							</span>
 						</div>
 
@@ -405,7 +406,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Tostadas
+									<strike>Tostadas</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -425,7 +426,7 @@
 						<div class="item-mainmenu m-b-36">
 							<div class="flex-w flex-b m-b-3">
 								<a href="#" class="name-item-mainmenu txt21">
-									Flautas (3)
+									<strike>Flautas (3)</strike>
 								</a>
 
 								<div class="line-item-mainmenu bg3-pattern"></div>
@@ -498,7 +499,7 @@
 							<span class="info-item-mainmenu txt23">
 								Homemade Tortillas, topped with Cilantro, Onions <br>
 								Choose: Suadero/Carnitas/Chorizo/Bistec/Al Pastor
-								<br>+.75 for Lengua
+								<br>+.75 for Lengua or Shrimp
 							</span>
 						</div>
 
@@ -519,7 +520,8 @@
 							<span class="info-item-mainmenu txt23">
 								Bun with refried Beans, Mayo, Tomato, Avocado, Lettuce, Cheese <br>
 								Jalapeno Peppers <br>
-								Choose: Milanesa/Chorizo con Huevo/al Pastor/Carnitas/Cubana
+								Choose: Milanesa/Chorizo con Huevo/al Pastor/Carnitas
+								<br>Add: +$2 Cubana
 							</span>
 						</div>
 
@@ -542,6 +544,11 @@
 								Add: White Rice/Black Beans/Pinto Beans/Pico De Gallo/Guacamole/Corn/Crema/Lettuce
 							</span>
 						</div>
+
+						<span class="info-item-mainmenu txt23">
+							<br><br>**** Striked items are currently unavailable
+							<br> **** Any extra guacamole is $1.50 extra
+					</span>
 
 
 					</div>
