--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,10 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+
+	<link rel="stylesheet" type="text/css" href="css/christmas.css">
+
+
 <style>
 		#map {
 			width: 100%;
@@ -39,6 +43,44 @@
 			background-color: grey;
 		}
 	</style>
+	<div class="snowflakes" aria-hidden="true">
+	  <div class="snowflake">
+	  ❅
+	  </div>
+	  <div class="snowflake">
+	  ❆
+	  </div>
+	  <div class="snowflake">
+	  ❅
+	  </div>
+	  <div class="snowflake">
+	  ❆
+	  </div>
+	  <div class="snowflake">
+	  ❅
+	  </div>
+	  <div class="snowflake">
+	  ❆
+	  </div>
+	  <div class="snowflake">
+	  ❅
+	  </div>
+	  <div class="snowflake">
+	    ❆
+	  </div>
+	  <div class="snowflake">
+	    ❅
+	  </div>
+	  <div class="snowflake">
+	    ❆
+	  </div>
+	  <div class="snowflake">
+	    ❅
+	  </div>
+	  <div class="snowflake">
+	    ❆
+	  </div>
+	</div>
 </head>
 <body class="animsition">
 
@@ -51,7 +93,8 @@
 					<!-- Logo -->
 					<div class="logo">
 						<a href="index.html">
-							<img src="images/icons/logo_new.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2.png">
+							<img src="images/icons/logo_new_xmas.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2_xmas.png">
+														<!-- Icon made by Freepik from www.flaticon.com -->
 						</a>
 					</div>
 
@@ -462,9 +505,10 @@
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
+	<script src='https://maps.googleapis.com/maps/api/js?key='+ my_key></script>
 	<script src="js/map-custom.js"></script>
 <!--===============================================================================================-->
+<script type='text/javascript' src='config.js'></script>
 	<script src="js/main.js"></script>
 
 </body>
