--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,48 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+
+	<link rel="stylesheet" type="text/css" href="css/christmas.css">
+
+
 </head>
+<div class="snowflake">
+❅
+</div>
+<div class="snowflake">
+❆
+</div>
+<div class="snowflake">
+❅
+</div>
+<div class="snowflake">
+❆
+</div>
+<div class="snowflake">
+❅
+</div>
+<div class="snowflake">
+❆
+</div>
+<div class="snowflake">
+❅
+</div>
+<div class="snowflake">
+	❆
+</div>
+<div class="snowflake">
+	❅
+</div>
+<div class="snowflake">
+	❆
+</div>
+<div class="snowflake">
+	❅
+</div>
+<div class="snowflake">
+	❆
+</div>
+</div>
 <body class="animsition">
 
 	<!-- Header -->
@@ -44,7 +85,8 @@
 					<!-- Logo -->
 					<div class="logo">
 						<a href="index.html">
-							<img src="images/icons/logo_new.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2.png">
+							<img src="images/icons/logo_new_xmas.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2_xmas.png">
+														<!-- Icon made by Freepik from www.flaticon.com -->
 						</a>
 					</div>
 
