--- a/about.html
+++ b/about.html
@@ -519,6 +519,7 @@
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/isotope/isotope.pkgd.min.js"></script>
 <!--===============================================================================================-->
+<script type='text/javascript' src='config.js'></script>
 	<script src="js/main.js"></script>
 
 </body>
