--- a/index.html
+++ b/index.html
@@ -558,6 +558,7 @@
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
+<script type='text/javascript' src='config.js'></script>
 	<script src="js/main.js"></script>
 
 </body>
