--- a/menu.html
+++ b/menu.html
@@ -1301,6 +1301,7 @@
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
+<script type='text/javascript' src='config.js'></script>
 	<script src="js/main.js"></script>
 
 </body>
