--- a/contact.html
+++ b/contact.html
@@ -477,7 +477,7 @@
 	    </script>
 		</script>
 		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfTXwdPTMFqEBDhyGemnuHxNVGdM_-xJs&callback=initMap">
+		src="https://maps.googleapis.com/maps/api/js?key="+my_key"-xJs&callback=initMap">
 		</script>
 <!--===============================================================================================-->
 
