--- a/contact.html
+++ b/contact.html
@@ -466,6 +466,9 @@
 	<div id="dropDownSelect1"></div>
 
 <!--===============================================================================================-->
+
+<script type='text/javascript' src='config.js'></script>
+	<script src="js/main.js"></script>
 	<script>
 	// Initialize and add the map
 	function initMap() {
@@ -477,7 +480,7 @@
 	    </script>
 		</script>
 		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key="+my_key"-xJs&callback=initMap">
+		src="https://maps.googleapis.com/maps/api/js?key="+nothingtoseehere+"-xJs&callback=initMap">
 		</script>
 <!--===============================================================================================-->
 
@@ -505,11 +508,9 @@
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
-	<script src='https://maps.googleapis.com/maps/api/js?key='+my_key></script>
+	<script src='https://maps.googleapis.com/maps/api/js?key='+nothingtoseehere></script>
 	<script src="js/map-custom.js"></script>
 <!--===============================================================================================-->
-<script type='text/javascript' src='config.js'></script>
-	<script src="js/main.js"></script>
 
 </body>
 </html>
