--- a/contact.html
+++ b/contact.html
@@ -511,7 +511,7 @@
 		<script src="js/map-custom.js"></script>
 
 		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key="+nothingtoseehere+"-xJs&callback=initMap">
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfTXwdPTMFqEBDhyGemnuHxNVGdM_-xJs&callback=initMap">
 		</script>
 
 </body>
