--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,15 @@
 <!--===============================================================================================-->
 
 	<link rel="stylesheet" type="text/css" href="css/christmas.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154196302-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154196302-1');
+</script>
 
 
 <style>
