cancel xmas theme

--- a/index.html
+++ b/index.html
@@ -45,44 +45,6 @@
 
 </head>
 
-<div class="snowflakes" aria-hidden="true">
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-    ❆
-  </div>
-  <div class="snowflake">
-    ❅
-  </div>
-  <div class="snowflake">
-    ❆
-  </div>
-  <div class="snowflake">
-    ❅
-  </div>
-  <div class="snowflake">
-    ❆
-  </div>
-</div>
 <body class="animsition">
 
 	<!-- Header -->
@@ -94,7 +56,7 @@
 					<!-- Logo -->
 					<div class="logo">
 						<a href="index.html">
-							<img src="images/icons/logo_new_xmas.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2_xmas.png">
+							<img src="images/icons/logo_new.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2.png">
 														<!-- Icon made by Freepik from www.flaticon.com -->
 						</a>
 					</div>
