--- a/contact.html
+++ b/contact.html
@@ -52,44 +52,6 @@
 			background-color: grey;
 		}
 	</style>
-	<div class="snowflakes" aria-hidden="true">
-	  <div class="snowflake">
-	  ❅
-	  </div>
-	  <div class="snowflake">
-	  ❆
-	  </div>
-	  <div class="snowflake">
-	  ❅
-	  </div>
-	  <div class="snowflake">
-	  ❆
-	  </div>
-	  <div class="snowflake">
-	  ❅
-	  </div>
-	  <div class="snowflake">
-	  ❆
-	  </div>
-	  <div class="snowflake">
-	  ❅
-	  </div>
-	  <div class="snowflake">
-	    ❆
-	  </div>
-	  <div class="snowflake">
-	    ❅
-	  </div>
-	  <div class="snowflake">
-	    ❆
-	  </div>
-	  <div class="snowflake">
-	    ❅
-	  </div>
-	  <div class="snowflake">
-	    ❆
-	  </div>
-	</div>
 </head>
 <body class="animsition">
 
@@ -102,7 +64,7 @@
 					<!-- Logo -->
 					<div class="logo">
 						<a href="index.html">
-							<img src="images/icons/logo_new_xmas.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2_xmas.png">
+							<img src="images/icons/logo_new.png" alt="IMG-LOGO" data-logofixed="images/icons/logo_new2.png">
 														<!-- Icon made by Freepik from www.flaticon.com -->
 						</a>
 					</div>
