--- a/about.html
+++ b/about.html
@@ -86,10 +86,7 @@
 
 					<!-- Social -->
 					<div class="social flex-w flex-l-m p-r-20">
-						<a href="#"><i class="fa fa-tripadvisor" aria-hidden="true"></i></a>
-						<a href="#"><i class="fa fa-facebook m-l-21" aria-hidden="true"></i></a>
-						<a href="#"><i class="fa fa-twitter m-l-21" aria-hidden="true"></i></a>
-
+						<a href="https://food.google.com/chooseprovider?restaurantId=/g/11hz5v8gy4&g2lbs=AGgkzMxn3I6aWp-iiPluSj8sbJaZ506ErXqzWBXg4BknLjJguApKriiei5PG3YzYjwN6Gnw70yDjbHhyakf_TGLdRZgF7NYwTg%3D%3D&hl=en-US&gl=us&cs=1&ssta=1&fo_m=MfohQo559jFvMWwP9igWZeWQMczq7voErUdXMT_RFPQ05bfKMQVr5-7IofUJMU_hT8vrWuwRMUOzJVpjPL1YMfaXTPp5KXh-OAE%3D&gei=1F0AYvbsONipptQPy9OtsAs&addressId=2341871807830007138&orderType=1&partnerId=11119966709964935892&fulfillmentTime&menuSearchQuery&cartId&fo_s=OA%2CAH&dineInLocationId&sei=CaO_Wl_xF2qqEUWh0YDVHvdv&utm_campaign&utm_source=search">ORDER NOW</a>
 						<button class="btn-show-sidebar m-l-33 trans-0-4"></button>
 					</div>
 				</div>
@@ -131,80 +128,7 @@
 
 			<!-- Gallery -->
 			<div class="wrap-gallery-sidebar flex-w">
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_chorizo2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/tacos_chorizo.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_3.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_3.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/quesadilla_vegetales2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/quesadilla_vegetales.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_4.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_4.jpg" alt="GALLERY">
-				</a>
-
-			<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/quesadilla_pollo2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/quesadilla_pollo.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_bistec2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/tacos_bistec.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_1.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_1.jpg" alt="GALLERY">
-				</a>
-
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_2.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_pastor2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/tacos_pastor.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/tacos_suadero2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/tacos_suadero.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/burro_carnitas2.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/burro_carnitas.png" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_5.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_5.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_6.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_6.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_7.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_7.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_8.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_8.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_9.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_9.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_10.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_10.jpg" alt="GALLERY">
-				</a>
-
-				<a class="item-gallery-sidebar wrap-pic-w" href="images/gallery/gallery_11.jpg" data-lightbox="gallery-footer">
-					<img src="images/gallery/thumbnail_11.jpg" alt="GALLERY">
-				</a>
-
+				<script type="text/javascript" src="js/custom.js"></script>
 			</div>
 		</div>
 	</aside>
@@ -213,7 +137,7 @@
 	<!-- Title Page -->
 	<!-- PICTURE ACCREDITED TO NATIONAL GEOGRAPHIC ORIGINAL PICTURE FOUND AT
 		https://www.nationalgeographic.com.es/historia/grandes-reportajes/malinche-la-indigena-que-abrio-mexico-a-cortes_6229/1 -->
-	<section class="bg-title-page flex-c-m p-t-160 p-b-80 p-l-15 p-r-15" style="background-image: url(images/big_cvr_1900x930.jpg);">
+	<section class="bg-title-page flex-c-m p-t-160 p-b-80 p-l-15 p-r-15" style="background-size:1920px 700px; background-image: url(images/big_cvr_1900x930.png);">
 		<h2 class="tit6 t-center">
 			About Us
 		</h2>
@@ -318,7 +242,7 @@
 							<a href="#"><img src="images/headshot_1.jpg" alt="IGM-AVATAR"></a>
 						</div>
 
-						<div class="text-blo5 size34 t-center bo-rad-10 bo7 p-t-90 p-l-35 p-r-35 p-b-30">
+						<div class="text-blo5 t-center bo-rad-10 bo7 p-t-90 p-l-35 p-r-35 p-b-30">
 							<a href="#" class="txt34 dis-block p-b-6">
 							 	Ernesto Grande
 							</a>
@@ -337,7 +261,7 @@
 							<a href="#"><img src="images/headshot_2.jpg" alt="IGM-AVATAR"></a>
 						</div>
 
-						<div class="text-blo5 size34 t-center bo-rad-10 bo7 p-t-90 p-l-35 p-r-35 p-b-30">
+						<div class="text-blo5 t-center bo-rad-10 bo7 p-t-90 p-l-35 p-r-35 p-b-30">
 							<a href="#" class="txt34 dis-block p-b-6">
 								Minerva Contreras
 							</a>
@@ -356,7 +280,7 @@
 							<a href="#"><img src="images/headshot_3.jpg" alt="IGM-AVATAR"></a>
 						</div>
 
-						<div class="text-blo5 size34 t-center bo-rad-10 bo7 p-t-90 p-l-35 p-r-35 p-b-30">
+						<div class="text-blo5 t-center bo-rad-10 bo7 p-t-90 p-l-35 p-r-35 p-b-30">
 							<a href="#" class="txt34 dis-block p-b-6">
 							Marina Contreras
 							</a>
@@ -383,18 +307,26 @@
 
 					<ul class="m-b-70">
 						<li class="txt14 m-b-14">
-							<i class="fa fa-map-marker fs-16 dis-inline-block size19" aria-hidden="true"></i>
-							1080 Nostrand Avenue, Brooklyn, NY
+							<i  class="fa fa-map-marker fs-16 dis-inline-block size19" aria-hidden="true"></i>
+							<a href="https://g.page/malincherestaurantnyc?share">
+								1018 A Nostrand Avenue, Brooklyn, NY
+							</a>
+							
+							
 						</li>
 
 						<li class="txt14 m-b-14">
+							<a href="tel:347-350-9543">
 							<i class="fa fa-phone fs-16 dis-inline-block size19" aria-hidden="true"></i>
 							(+1) 347 350 9543
+						</a>
 						</li>
 
 						<li class="txt14 m-b-14">
+							<a href="mailto:malincherestaurantnyc@gmail.com">
 							<i class="fa fa-envelope fs-13 dis-inline-block size19" aria-hidden="true"></i>
 							malincherestaurantnyc@gmail.com
+						</a>
 						</li>
 					</ul>
 				</div>
@@ -433,7 +365,7 @@
 					</div>
 
 					<div class="txt17 p-r-20 p-t-5 p-b-5">
-						Copyright &copy; 2019 All rights reserved
+						Copyright &copy; 2022 All rights reserved
 					</div>
 				</div>
 			</div>
